--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link rel="stylesheet" href="css/movement.css">
 	<link rel="stylesheet" href="css/animation.css">
 	<link rel="stylesheet" href="css/tester.css">
-	<link rel="stylesheet" href="font/_NNY/stylesheet.css">
-	<link rel="stylesheet" href="font/_Open_Sans-www/stylesheet.css">
+	<link rel="stylesheet" href="font/NNY/stylesheet.css">
+	<link rel="stylesheet" href="font/OpenSanswww/stylesheet.css">
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/index.js"></script>
 	<script>
