--- a/Animation/03-sliding-text-effect/index.html
+++ b/Animation/03-sliding-text-effect/index.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Sliding text effect</title>
-    <link rel="stylesheet" href="font/NNY/stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:900&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+    <link rel="stylesheet" href="../../font/_NNY/stylesheet.css">
+  
       <link rel="stylesheet" href="css/slide.css">
 
   
