--- a/Animation/03-sliding-text-effect/index.html
+++ b/Animation/03-sliding-text-effect/index.html
@@ -8,9 +8,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
-    <link rel="stylesheet" href="../../font/NNY/stylesheet.css">
+    <link rel="stylesheet" href="font/NNY/stylesheet.css">
   
-      <link rel="stylesheet" href="css/slide.css">
+    <link rel="stylesheet" href="css/slide.css">
 
   
 </head>
